ccache news
===========

ccache 3.4
----------
Unreleased

New features and enhancements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The compiler option form `--sysroot arg` is now handled like the documented
  `--sysroot=arg` form.

- Added support for caching `.su` files generated by GCC flag `-fstack-usage`.

- Configuration errors are now treated as warnings instead of fatal errors.

- ccache should now work with distcc's ``pump'' wrapper.

- The optional unifier is no longer disabled when the direct mode is enabled.

- Added support for nvcc compiler options `--compiler-bindir/-ccbin`,
  `--output-directory/-odir` and `--libdevice-directory/-ldir`.

- Boolean environment variable settings no longer accept the following
  (case-insensitive) values: `0`, `false`, `disable` and `no`. All other values
  are accepted and taken to mean "true". This is to stop users from setting
  e.g. `CCACHE_DISABLE=0` and then expect the cache to be used.

- Improved support for `run_second_cpp = false`: If combined with passing
  `-fdirectives-only` (GCC) or `frewrite-includes` (Clang) to the compiler,
  diagnostics warnings and similar will be correct.

- An implicit `-MQ` is now passed to the preprocessor only if the object file
  extension is non-standard. This should make it easier to use EDG-based
  compilers (e.g. GHS) which don't understand `-MQ`.

- Documented more pitfalls with enabling `hard_links` (`CCACHE_HARDLINK`).

- Documented caveats related to colored warnings from compilers.


Bug fixes
~~~~~~~~~

- File size and number counters are now updated correctly when files are
  overwritten in the cache, e.g. when using `CCACHE_RECACHE`.

- `run_second_cpp` is now forced for nvcc.

- Fixed how the nvcc options `-optf` and `-odir` are handled.


ccache 3.3.6
------------
Release date: 2018-01-28

New features and enhancements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Improved instructions on how to get cache hits between different working
  directories.


Bug fixes
~~~~~~~~~
