@@ -13,8 +13,6 @@ New features and enhancements
 
 - Added support for caching `.su` files generated by GCC flag `-fstack-usage`.
 
-- Configuration errors are now treated as warnings instead of fatal errors.
-
 - ccache should now work with distcc's ``pump'' wrapper.
 
 - The optional unifier is no longer disabled when the direct mode is enabled.
@@ -34,6 +32,9 @@ New features and enhancements
 - An implicit `-MQ` is now passed to the preprocessor only if the object file
   extension is non-standard. This should make it easier to use EDG-based
   compilers (e.g. GHS) which don't understand `-MQ`.
+
+- ccache now treats an unreadable configuration file just like a missing
+  configuration file.
 
 - Documented more pitfalls with enabling `hard_links` (`CCACHE_HARDLINK`).
 
